--- a/css/styles.css
+++ b/css/styles.css
@@ -375,6 +375,27 @@ body {
   color: var(--color-light);
   max-width: 264px;
 }
+.footer-list {
+  gap: 16px;
+}
+.social-media-footer {
+  margin-left: 120px;
+}
+.social-media-footer-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+.footer-sections {
+  display: flex;
+}
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: var(--color-success);
+}
 /**
   |============================
   | PORTFOLIO
@@ -421,7 +442,11 @@ body {
   background-color: var(--color-white-background);
   flex-basis: calc((100%-24px * 2) / 3);
 }
-
+.portfolio-info-card:hover,
+.portfolio-info-card:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 .portfolio-info-card {
   border: 1px solid var(--color-accent);
   padding: 32px 16px;
