--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,8 @@ body {
 .header {
   background-color: --color-white-background;
   border-bottom: 1px solid var(--color-accent);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .logo {
   font-family: "Raleway", sans-serif;
@@ -137,6 +139,9 @@ body {
   background-size: cover;
   padding-top: 188px;
   padding-bottom: 188px;
+  max-width: 1440px;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .hero {
   text-align: center;
@@ -269,12 +274,14 @@ body {
 .card {
   background-color: var(--color-white-background);
   flex-basis: calc((100%-24 * 3) / 4);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .card-img {
   margin-bottom: 32px;
 }
 .card-info {
-  padding: 32px 16px;
+  padding: 32px 0px;
   text-align: center;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -299,6 +306,7 @@ body {
 .social-list-icon {
   width: 16px;
   height: 16px;
+  fill: var(--color-light);
 }
 .social-list-link {
   display: flex;
@@ -324,7 +332,7 @@ body {
 .customers-title {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11;
+  line-height: 1.1;
   letter-spacing: 0.02em;
   color: var(--color-dark);
   text-align: center;
@@ -343,16 +351,16 @@ body {
   padding: 16px 32px;
   width: 168px;
   height: 88px;
-  fill: var(--color-subtle);
+  color: var(--color-subtle);
 }
 .customers-link:hover,
 .customers-link:focus {
-  fill: var(--color-pressed-state);
   border: 1px solid var(--color-pressed-state);
 }
 .customers-logo {
   width: 104px;
   height: 56px;
+  fill: currentColor;
 }
 .footer {
   background-color: var(--color-dark);
