--- a/css/styles.css
+++ b/css/styles.css
@@ -42,8 +42,8 @@ body {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  outline: 2px solid red;
-  outline-offset: -2px;
+  /* outline: 2px solid red;
+  outline-offset: -2px; */
 }
 .visually-hidden {
   position: absolute;
@@ -58,6 +58,11 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+/**
+  |============================
+  | HEADER
+  |============================
+*/
 .header {
   background-color: --color-white-background;
   border-bottom: 1px solid var(--color-accent);
@@ -129,6 +134,11 @@ body {
   display: flex;
   align-items: center;
 }
+/**
+  |============================
+  | HERO
+  |============================
+*/
 .hero-section {
   background-color: var(--color-hero-background);
   background-image: linear-gradient(
@@ -142,6 +152,8 @@ body {
   max-width: 1440px;
   background-position: center;
   background-repeat: no-repeat;
+  margin-right: auto;
+  margin-left: auto;
 }
 .hero {
   text-align: center;
@@ -182,6 +194,11 @@ body {
 .title-btn:focus {
   background-color: var(--color-pressed-state);
 }
+/**
+  |============================
+  | FEATURES
+  |============================
+*/
 .feature-section {
   padding-top: 120px;
   padding-bottom: 120px;
@@ -208,10 +225,10 @@ body {
   letter-spacing: 0.02em;
   color: var(--color-text);
 }
-.feature-icon {
+/* .feature-icon {
   width: 64px;
   height: 64px;
-}
+} */
 .icon-item {
   display: flex;
   background-color: var(--color-light);
@@ -222,6 +239,11 @@ body {
   border-radius: 4px;
   margin-bottom: 8px;
 }
+/**
+  |============================
+  | PRODUCTS
+  |============================
+*/
 .products-section {
   padding-bottom: 120px;
 }
@@ -246,8 +268,11 @@ body {
 .products-item {
   flex-basis: calc((100%-24px * 2) / 3);
 }
-/* .product-img {
-} */
+/**
+  |============================
+  | TEAM
+  |============================
+*/
 .team-cards {
   background-color: var(--color-light);
   padding-top: 120px;
@@ -298,8 +323,8 @@ body {
   margin-bottom: 8px;
 }
 .social-list-icon {
-  width: 16px;
-  height: 16px;
+  /* width: 16px;
+  height: 16px; */
   fill: var(--color-light);
 }
 .social-list-link {
@@ -320,6 +345,11 @@ body {
   gap: 24px;
   justify-content: center;
 }
+/**
+  |============================
+  | CUSTOMERS
+  |============================
+*/
 .customers-section {
   padding: 120px 0px;
 }
@@ -357,6 +387,11 @@ body {
   height: 56px;
   fill: currentColor;
 }
+/**
+  |============================
+  | FOOTER
+  |============================
+*/
 .footer {
   background-color: var(--color-dark);
   padding-top: 100px;
